sitecore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-blue-green
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: nginx.altudo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-active
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.altudo.net
      secretName: nginx-tls
